# senior-project-rlbot-rlgym

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-tensorflow.txt  requirements.txt
.venv-wsl/: pyvenv.cfg
Milestone_1/: extract_player_data.py  list_all_replay_metadata.py
Milestone_1/common/: __init__.py
Milestone_1/helpers/: debug_links.py  inspect_structure.py
Milestone_1/heuristic_analysis/: analyzer.py  complete_gameplay_data.csv  live_dashboard.py
Milestone_1/live_analysis/: README.md  future_event_engine.py  http_server.py  label_audit.py  llm_event_explainer.py  mechanic_grader.py  metrics_engine.py  recommendation_engine.py  review_store.py  run_live_analysis.py  scenario_loader.py  scenario_spawner.py  session_recorder.py  state_store.py
Milestone_1/replay_dashboard/: replay_http_server.py  replay_loader.py  replay_packet_adapter.py  replay_state_store.py  run_replay_dashboard.py
configs/: live_analysis.default.yaml  replay.default.yaml  train.default.yaml
data/: README.md
docs/: architecture.md  data-policy.md  workflows.md
requirements/: base.txt  dev.txt  tensorflow.txt
rlbot/: my_replay.replay  rlbot_starting_code.py
rlbot_training/: .dockerignore  .gitignore  LoggingCombinedReward.py  coach_analysis.py  dashboard.py  fetch_stats.py  main.py  match_stats.json  parse_replay.py  rlbot_starting_code.py  settings.txt
scripts/: bootstrap.ps1  check_no_large_files.py  history_cleanup.ps1  launch_live_analysis.ps1  live_analysis.ps1  replay_dashboard.ps1  replay_extract.ps1  train.ps1
(+51 files in other folders)
